# DL_tasks

./: README.md  index.html  pyproject.toml  search.json  settings.ini  sitemap.xml
Audio/: Audio_Models_in_React_WebGPU_and_CPU.html  audio_classification.html  audio_to_audio.html  automatic_speech_recognition.html  text_to_audio.html  text_to_speech.html  voice_activity_detection.html
Computer_Vision/: depth_estimation.html  image_classification.html  image_feature_extraction.html  image_segmentation.html  image_to_3d.html  image_to_image.html  image_to_text.html  image_to_video.html  keypoint_detection.html  mask_generation.html  object_detection.html  text_to_3d.html  text_to_image.html  text_to_video.html  unconditional_image_generation.html  video_classification.html  video_to_video.html  zero_shot_image_classification.html  zero_shot_object_detection.html
DL_tasks/: _modidx.py
Multimodal/: any_to_any.html  audio_text_to_text.html  document_question_answering.html  image_text_to_image.html  image_text_to_text.html  image_text_to_video.html  video_text_to_text.html  visual_document_retrieval.html  visual_question_answering.html
Natural_Language_Processing/: feature_extraction.html  fill_mask.html  question_answering.html  sentence_similarity.html  summarization.html  table_question_answering.html  text_classification.html  text_generation.html  text_ranking.html  token_classification.html  translation.html  zero_shot_classification.html
Other/: graph_machine_learning.html
Reinforcement_Learning/: reinforcement_learning.html  robotics.html
Research/: _modidx.py
Tabular/: tabular_classification.html  tabular_regression.html  time_series_forecasting.html
Theory/: 0_mathematics_foundations.html  0_physics_equations.html  1_discrete_maths.html  1_electromagnetic_equations.html  2_deep_learning_equations.html  electricity_equations.html  forresnet.html
_docs/: index.html  search.json  sitemap.xml
_proc/: 00_1_Discrete_Maths.ipynb  (+9 more)
(+259 files in other folders)
