[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "Research"
dynamic = ["version"]
description = "Research into Deep Learning Models"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "Primary", email = "bthekkel1@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/bthek1/Research"
Documentation = "https://bthek1.github.io/Research"

[project.entry-points.nbdev]
Research = "Research._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "Research.__version__"}

[tool.setuptools.packages.find]
include = ["Research"]

[tool.nbdev]
