[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "DL_tasks"
dynamic = ["version"]
description = "Research into Deep Learning Models"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "Apache-2.0"}
authors = [{name = "Primary", email = "bthekkel1@gmail.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = []

[project.urls]
Repository = "https://github.com/bthek1/DL_tasks"
Documentation = "https://bthek1.github.io/DL_tasks"

[project.entry-points.nbdev]
DL_tasks = "DL_tasks._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "DL_tasks.__version__"}

[tool.setuptools.packages.find]
include = ["DL_tasks"]

[tool.nbdev]
